# pbes-symmetry-experiments

merc/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  rustfmt.toml
merc/.devcontainer/: devcontainer.json
merc/crates/aterm/: Cargo.toml  README.md  term_grammar.pest
merc/crates/aterm/benchmarks/: Cargo.toml
merc/crates/aterm/benchmarks/benches/: benchmark_aterm.rs
merc/crates/aterm/src/: aterm.rs  aterm_binary_stream.rs  aterm_builder.rs  aterm_int.rs  aterm_list.rs  aterm_string.rs  lib.rs  markable.rs  parse_term.rs  protected.rs  random_term.rs  symbol.rs  transmutable.rs
merc/crates/aterm/src/storage/: aterm_storage.rs  gc_mutex.rs  global_aterm_pool.rs  mod.rs  shared_term.rs  symbol_pool.rs  thread_aterm_pool.rs
merc/crates/aterm/tests/: build_tests.rs
merc/crates/aterm/tests/input/: aterm_container_lifetime.rs  aterm_container_lifetime.stderr  aterm_lifetime.rs  aterm_lifetime.stderr
merc/crates/collections/: Cargo.toml  README.md
merc/crates/collections/src/: compressed_vec.rs  indexed_set.rs  lib.rs  protection_set.rs  vecset.rs
merc/crates/data/: Cargo.toml  README.md
merc/crates/data/src/: data_expression.rs  data_specification.rs  data_terms.rs  lib.rs  sort_terms.rs
merc/crates/io/: Cargo.toml  README.md
merc/crates/io/src/: bitstream.rs  dumpfiles.rs  format.rs  lib.rs  line_iterator.rs  progress.rs
merc/crates/ldd/: Cargo.toml  README.md
merc/crates/ldd/benchmarks/: Cargo.toml
merc/crates/ldd/benchmarks/benches/: benchmarks_ldd.rs
merc/crates/ldd/src/: format.rs  io_ldd.rs  io_sylvan.rs  iterators.rs  lib.rs  operations.rs  storage.rs  test_utility.rs
merc/crates/ldd/src/storage/: cache.rs  ldd.rs
merc/crates/lts/: Cargo.toml  README.md  build.rs
merc/crates/lts/src/: incoming_transitions.rs  io.rs  io_aut.rs  io_bcg.rs  io_lts.rs  labelled_transition_system.rs  lib.rs  lts.rs  lts_builder.rs  lts_builder_fast.rs  multi_action.rs  product_lts.rs  random_lts.rs
merc/crates/macros/: Cargo.toml  README.md
merc/crates/macros/src/: lib.rs  merc_derive_terms.rs
merc/crates/number/: Cargo.toml  README.md
merc/crates/number/src/: bits_for_value.rs  lib.rs  power_of_two.rs  u64_variablelength.rs
merc/crates/preorder/: Cargo.toml  README.md
merc/crates/preorder/src/: antichain.rs  failures_refinement.rs  lib.rs  preorder.rs
merc/crates/rec-tests/: Cargo.toml  rec_grammar.pest
merc/crates/rec-tests/src/: lib.rs  parse_rec.rs  syntax.rs
merc/crates/rec-tests/tests/: rec_tests.rs
merc/crates/rec-tests/tests/snapshot/: result_binarysearch.txt  result_bubblesort10.txt  result_bubblesort100.txt  result_bubblesort20.txt  (+36 more)
merc/crates/reduction/: Cargo.toml  README.md
merc/crates/reduction/src/: block_partition.rs  compare.rs  indexed_partition.rs  lib.rs  quotient.rs  reduce.rs  scc_decomposition.rs  signature_refinement.rs  signatures.rs  simple_block_partition.rs  sort_topological.rs  weak_bisimulation.rs
merc/crates/sabre/: Cargo.toml  README.md
merc/crates/sabre/benchmarks/: Cargo.toml
merc/crates/sabre/src/: innermost_rewriter.rs  lib.rs  naive_rewriter.rs  rewrite_specification.rs  sabre_rewriter.rs  test_utility.rs
merc/crates/sharedmutex/: Cargo.toml  README.md
merc/crates/sharedmutex/benchmarks/: Cargo.toml
merc/crates/sharedmutex/src/: bf_sharedmutex.rs  bf_vec.rs  lib.rs  recursive_lock.rs
merc/crates/symbolic/: Cargo.toml  README.md
merc/crates/symbolic/src/: cube_iter.rs  format.rs  io.rs  io_sylvan.rs  io_symbolic_lts.rs  ldd_to_bdd.rs  lib.rs  random_bdd.rs  reachability.rs  symbolic_lts.rs
merc/crates/syntax/: Cargo.toml  README.md  mcrl2_grammar.pest
merc/crates/syntax/spec/: bool.mcrl2
merc/crates/syntax/src/: consume.rs  lib.rs  parse.rs  precedence.rs  syntax_tree.rs  syntax_tree_display.rs  visitor.rs
merc/crates/syntax/tests/: example_test.rs  grammar_test.rs
merc/crates/tools/: Cargo.toml  build.rs
merc/crates/tools/src/: console.rs  lib.rs  verbosity.rs  version.rs
merc/crates/unsafety/: Cargo.toml  README.md
merc/crates/unsafety/src/: block_allocator.rs  counting_allocator.rs  erasable.rs  global_allocator.rs  index_edge.rs  lib.rs  slice_dst.rs  stable_pointer_set.rs
merc/crates/utilities/: Cargo.toml  README.md
merc/crates/utilities/src/: cast_macro.rs  debug_trace.rs  error.rs  generational_index.rs  helper.rs  lib.rs  no_hasher.rs  permutation.rs  pest_display_pair.rs  random_test.rs  tagged_index.rs  test_logger.rs  timing.rs
merc/crates/vpg/: Cargo.toml  README.md
merc/crates/vpg/src/: feature_transition_system.rs  lib.rs  modal_equation_system.rs  project.rs  reachability.rs  translate.rs  variability_zielonka.rs  zielonka.rs
merc/crates/xtask/: Cargo.toml
merc/crates/xtask/data/: leak_sanitizer.suppress  thread_sanitizer.suppress
merc/crates/xtask/src/: coverage.rs  discover_tests.rs  main.rs  package.rs  publish.rs  sanitizer.rs  tool_testing.rs
merc/examples/: .gitignore
merc/examples/REC/: README.md
merc/examples/REC/rec/: block.rec  blocksum.rec  bubblesort.rec  bubblesort10.rec  check1.rec  check2.rec  confluence.rec  fibfree.rec  fibonacci05.rec  garbagecollection.rec  hanoi.rec  hanoi4.rec  missionaries.rec  octetsum.rec  oddeven.rec  order.rec  pair.rec  searchinconditions.rec  soundnessofparallelengines.rec  tautologyhard.rec  tricky.rec
merc/examples/ldd/: README.md
merc/examples/lts/: WMS.sym  abp.bcg
merc/examples/mCRL2/: README.md
merc/examples/pbes/: README.md
merc/examples/vpg/: README.md  example.pg  example.vpg  minepump_fts.fd  running_example.mcf  running_example_fts.fd
merc/tools/gui/: Cargo.toml  README.md  deny.toml
merc/tools/gui/ltsgraph/: Cargo.toml  build.rs
merc/tools/gui/ltsgraph-lib/: Cargo.toml
merc/tools/lts/: Cargo.toml
merc/tools/lts/src/: main.rs
merc/tools/mcrl2/: Cargo.toml  README.md  deny.toml
merc/tools/mcrl2/pbes/: Cargo.toml
merc/tools/rewrite/: Cargo.toml
merc/tools/rewrite/src/: lib.rs  main.rs  trs_format.rs
merc/tools/sym/: Cargo.toml
merc/tools/sym/src/: main.rs
merc/tools/vpg/: Cargo.toml
merc/tools/vpg/src/: main.rs
(+170 files in other folders)
