[package]
name = "merc_aterm"
description = "A thread-safe library to manipulate and store first-order terms."
keywords = ["concurrency", "term"]
categories = ["algorithms", "concurrency", "data-structures", "science"]
readme = "README.md"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
# The `merc_debug` feature is used to enable additional run-time checks.
merc_debug = ["parking_lot/deadlock_detection"]

[dependencies]
merc_collections.workspace = true
merc_io.workspace = true
merc_macros.workspace = true
merc_number.workspace = true
merc_sharedmutex.workspace = true
merc_unsafety.workspace = true
merc_utilities.workspace = true

merc_pest_consume.workspace = true

allocator-api2.workspace = true
dashmap.workspace = true
delegate.workspace = true
equivalent.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
pest_derive.workspace = true
pest.workspace = true
rand.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true

[dev-dependencies]
trybuild.workspace = true