[package]
name = "merc_ldd"
description = "Implements algorithms and I/O for list decision diagrams."
keywords = ["automata", "transition-systems"]
categories = ["data-structures", "science"]
readme = "README.md"
version.workspace = true

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
merc_aterm.workspace = true
merc_collections.workspace = true
merc_io.workspace = true
merc_number.workspace = true
merc_utilities.workspace = true

ahash.workspace = true
delegate.workspace = true
itertools.workspace = true
log.workspace = true
rand.workspace = true
rustc-hash.workspace = true