[package]
name = "merc_lts"
description = "Implements labelled transition systems for various I/O formats using a general LTS trait."
keywords = ["automata", "transition-systems"]
categories = ["data-structures", "science"]
readme = "README.md"
version = "1.1.0"

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
# Enable CADP to read and write files in the BCG format.
cadp = []
# Derive some additional traits for clap.
clap = ["dep:clap"]

[dependencies]
merc_aterm.workspace = true
merc_collections.workspace = true
merc_data.workspace = true
merc_io.workspace = true
merc_macros.workspace = true
merc_utilities.workspace = true

bumpalo.workspace = true
delegate.workspace = true
itertools.workspace = true
log.workspace = true
rand.workspace = true
regex.workspace = true
rustc-hash.workspace = true
streaming-iterator.workspace = true
thiserror.workspace = true

clap = { workspace = true, optional = true}

[dev-dependencies]
test-log.workspace = true
tempfile.workspace = true

[build-dependencies]
bindgen.workspace = true
cargo-emit = "0.2"