[package]
name = "merc_macros"
description = "Internal MERC crate containing procedural macros for code generation."
readme = "README.md"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
delegate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true