[package]
name = "merc_number"
description = "Internal MERC toolset package containing various number related utility functions."
readme = "README.md"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
merc_utilities.workspace = true

rand.workspace = true
bitstream-io.workspace = true
num.workspace = true