[package]
name = "merc_utilities"
description = "Internal MERC crate containing various utility functions."
readme = "README.md"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
# Disable logging when miri is enabled since that does not work with isolation mode.
merc_miri = []

# Enables the debug_trace macro to show additional log messages.
merc_debug-trace = []

[dependencies]
ahash.workspace = true
backtrace.workspace = true
delegate.workspace = true
env_logger.workspace = true
log.workspace = true
pest.workspace = true
rand.workspace = true

[build-dependencies]
toml.workspace = true