[package]
name = "merc_vpg"
description = "Crate for manipulating (variability) parity games, including I/O in the PGSolver format"
keywords = ["parity-games"]
categories = ["algorithms", "data-structures", "science"]
readme = "README.md"

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
clap = ["dep:clap"]

[dependencies]
merc_collections.workspace = true
merc_io.workspace = true
merc_lts.workspace = true
merc_macros.workspace = true
merc_symbolic.workspace = true
merc_syntax.workspace = true
merc_utilities.workspace = true

bitvec.workspace = true
delegate.workspace = true
itertools.workspace = true
log.workspace = true
oxidd.workspace = true
rand.workspace = true
regex.workspace = true
streaming-iterator.workspace = true
thiserror.workspace = true

clap = { workspace = true, optional = true }