[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
duct.workspace = true
glob.workspace = true
regex.workspace = true
serde_json.workspace = true
serde.workspace = true
which.workspace = true