[package]
name = "merc-lts"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
merc_io.workspace = true
merc_ldd.workspace = true
merc_lts = { workspace = true, features = ["clap"] }
merc_preorder= { workspace = true, features = ["clap"] }
merc_reduction= { workspace = true, features = ["clap"] }
merc_tools.workspace = true
merc_unsafety.workspace = true
merc_utilities.workspace = true

clap.workspace = true
env_logger.workspace = true
log.workspace = true
