[workspace.package]
edition = "2024"
license = "BSL-1.0"
rust-version = "1.85.0"
version = "1.0.0"

# Add debug information to the release binaries.
[profile.release]
lto = "fat"
panic = "abort"
debug = "line-tables-only"

[workspace]
resolver = "3"
members = [
    "crates/mcrl2-sys",
    "crates/mcrl2",
    "crates/xtask",
    "pbes",
]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
cmake = "0.1"
env_logger = "0.11"
itertools = "0.14"
log = "0.4"
parking_lot = "0.12"
rand = "0.9"
thiserror = "2.0"

# Dependencies for building the mCRL2 C++ bindings.
cxx = "1.0"
cxx-build = { version = "1.0", features = ["parallel"] }
cc = "1.2"
cargo-emit = "0.2"

# Dependencies used in procedural macros.
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Dependencies used in xtask
duct = "1.1"

# The workspace libraries.
mcrl2 = { path = "crates/mcrl2" }
mcrl2-macros = { path = "crates/mcrl2-macros" }
mcrl2-sys = { path = "crates/mcrl2-sys" }
merc_collections = { path = "../../crates/collections" }
merc_io = { path = "../../crates/io" }
merc_tools = { path = "../../crates/tools" }
merc_utilities = { path = "../../crates/utilities" }