[package]
name = "benchmarks_aterm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merc_aterm.workspace = true

criterion.workspace = true
env_logger.workspace = true

[[bench]]
name = "benchmark_aterm"
harness = false