[package]
name = "benchmarks_sabre"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merc_aterm.workspace = true
merc_data.workspace = true
merc_rec-tests.workspace = true
merc_sabre.workspace = true
merc_utilities.workspace = true

criterion.workspace = true
env_logger.workspace = true
ahash.workspace = true

[[bench]]
name = "benchmark_sabre"
harness = false